spis treści - WIP

--- a/index.html
+++ b/index.html
@@ -9,5 +9,10 @@
     />
     <h1>Git strona</h1>
     <p>przykładowy opis</p>
+    <h2>Spis treści</h2>
+    <ul>
+      <li>Rodział 1</li>
+      <li>Rodział 2</li>
+    </ul>
   </body>
 </html>
