Spis tresci - praca rownoległa - WIP

--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
       <li>Rodział 1</li>
       <li>Rodział 2</li>
       <li>Rodział 3</li>
+      <ul>
+        <li>kolejny element listy</li>
+        <li>kolejny element listy</li>
+      </ul>
     </ul>
   </body>
 </html>
