lista pod nagłówkiem

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     />
 
     <h1 class="head">Git strona</h1>
+    <ul>
+      <li>czym jest git</li>
+      <li>instalcja git'a</li>
+      <li>konfiguracja repozytorium</li>
+    </ul>
     <p class="head">przykładowy opis</p>
     <h2>Spis treści</h2>
     <ul>
