dodano informacje o autorze

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <li>kolejny element listy</li>
         <li>kolejny element listy</li>
       </ul>
+      <li>O autorze</li>
     </ul>
   </body>
 </html>
