nowa sekjca na liście

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <li>kolejny element listy</li>
       </ul>
       <li>O autorze</li>
+      <p>nowa sekcja</p>
     </ul>
   </body>
 </html>
